--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.QRdinggevalzooi.MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.035" />
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
@@ -34,7 +22,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_default="spread"
-        app:layout_constraintWidth_max="wrap"></LinearLayout>
+        app:layout_constraintWidth_max="wrap">
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/pijltje"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/actionModeCloseDrawable" />
 
     <Button
         android:id="@+id/butt"
@@ -42,7 +50,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="105dp"
         android:layout_marginLeft="105dp"
-        android:layout_marginTop="568dp"
+        android:layout_marginTop="556dp"
         android:layout_marginEnd="105dp"
         android:layout_marginRight="105dp"
         android:text="hecc"
@@ -75,12 +83,12 @@
         android:layout_marginLeft="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
+        android:background="#00990606"
+        android:contentDescription="qrding"
         app:layout_constraintBottom_toTopOf="@+id/dingetje"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.507"
-        app:srcCompat="@drawable/ic_launcher_background" />
-
+        app:layout_constraintVertical_bias="0.507" />
 </android.support.constraint.ConstraintLayout>
