--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="556dp"
         android:layout_marginEnd="105dp"
         android:layout_marginRight="105dp"
-        android:text="hecc"
+        android:text="Genereer"
         android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
